feat: Conclusão da implementação da parte do cliente
- Adicionado frontend inicial com funcionalidades básicas para o cliente
- Refatorações e melhorias na parte do cliente:
  - Otimização de componentes da interface para melhor performance
  - Refatoração da lógica de interação do usuário para maior usabilidade e manutenção
  - Implementação de novas validações no lado do cliente para dados de entrada
  - Atualização de dependências de frontend para as versões mais recentes
  - Melhorias na cobertura de testes para os componentes do cliente