@@ -1,39 +1,52 @@
 package com.rb.TableMaster.dto.mapper;
 
 import com.rb.TableMaster.dto.OrderDTO;
-import com.rb.TableMaster.dto.OrderItemDTO;
-import com.rb.TableMaster.model.*;
+import com.rb.TableMaster.model.Order;
 import com.rb.TableMaster.model.enums.OrderStatus;
 import org.springframework.stereotype.Component;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Collections;
 
 @Component
 public class OrderMapper {
+
+    private final OrderItemMapper orderItemMapper;
+
+    public OrderMapper(OrderItemMapper orderItemMapper) {
+        this.orderItemMapper = orderItemMapper;
+    }
 
     public OrderDTO toDTO(Order order) {
         if (order == null) {
             return null;
         }
 
+        String userCpf = null;
+        String userName = null;
+        if (order.getUser() != null) {
+            userCpf = order.getUser().getCpf();
+            userName = order.getUser().getFullName();
+        }
+
         return new OrderDTO(
                 order.getId(),
                 order.getTable() != null ? order.getTable().getId() : null,
-                order.getTable() != null ? "Mesa " + order.getTable().getNumber() : null,
-                order.getUser() != null ? Long.valueOf(order.getUser().getCpf()) : null,
-                order.getUser() != null ? order.getUser().getFullName() : null,
+                order.getTable() != null && order.getTable().getNumber() != 0 ? "Mesa " + order.getTable().getNumber() : null,
+                userCpf,
+                userName,
                 order.getItems() != null ?
                         order.getItems().stream()
-                                .map(this::toItemDTO)
-                                .collect(Collectors.toList()) : List.of(),
+                                .map(orderItemMapper::toDTO)
+                                .toList()
+                        : Collections.emptyList(),
                 order.getCreatedAt(),
                 order.getStatus() != null ? order.getStatus() : OrderStatus.OPEN,
                 order.getTotalValue() != null ? order.getTotalValue() : BigDecimal.ZERO,
                 order.getPaymentMethod(),
-                order.getClosedAt()
+                order.getClosedAt(),
+                order.getReservedTime()
         );
     }
 
@@ -49,6 +62,7 @@ public class OrderMapper {
         order.setTotalValue(orderDTO.totalValue() != null ? orderDTO.totalValue() : BigDecimal.ZERO);
         order.setPaymentMethod(orderDTO.paymentMethod());
         order.setClosedAt(orderDTO.closedAt());
+        order.setReservedTime(orderDTO.reservedTime());
 
         return order;
     }
@@ -57,7 +71,6 @@ public class OrderMapper {
         if (orderDTO == null || order == null) {
             return;
         }
-
         if (orderDTO.status() != null) {
             order.setStatus(orderDTO.status());
         }
@@ -70,28 +83,8 @@ public class OrderMapper {
         if (orderDTO.closedAt() != null) {
             order.setClosedAt(orderDTO.closedAt());
         }
-    }
-
-    private OrderItemDTO toItemDTO(OrderItem orderItem) {
-        if (orderItem == null) {
-            return null;
+        if (orderDTO.reservedTime() != null) {
+            order.setReservedTime(orderDTO.reservedTime());
         }
-
-        BigDecimal totalPrice = BigDecimal.ZERO;
-        if (orderItem.getUnitPrice() != null && orderItem.getQuantity() > 0) {
-            totalPrice = orderItem.getUnitPrice().multiply(BigDecimal.valueOf(orderItem.getQuantity()));
-        }
-
-        return new OrderItemDTO(
-                orderItem.getId(),
-                orderItem.getOrder() != null ? orderItem.getOrder().getId() : null,
-                orderItem.getMenuItem() != null ? orderItem.getMenuItem().getId() : null,
-                orderItem.getMenuItem() != null ? orderItem.getMenuItem().getName() : null,
-                orderItem.getMenuItem() != null ? orderItem.getMenuItem().getDescription() : null,
-                orderItem.getQuantity(),
-                orderItem.getUnitPrice(),
-                totalPrice,
-                orderItem.getStatus()
-        );
     }
 }
